@@ -1,0 +1,19 @@
+<?php  
+require_once("model.php");
+
+/** specific model class for the home page */
+class HomeModel extends Model 
+{
+	/** 
+	 * Executes the logic required for the specific model, sets any needed output and returns it.
+	 * 
+	 * @return array $output
+	 */
+	public function execute() : array 
+	{
+		$returnData = [];
+
+		return $returnData;
+	}
+}
+?>
