@@ -1,0 +1,78 @@
+<?php  
+
+require_once("view.php");
+
+/**
+ * View class for the admin page
+ */
+class AdminView extends View 
+{
+	/**
+	 * Function which makes/creates the actual view. (the specific to this page part)
+	 * 
+	 * @param array $modelOutput
+	 * @return string $view
+	 */
+	protected function createView(array $modelOutput) : string
+	{
+		$view =
+		"
+		<div class='subjectContainer'>
+			<table>
+				<tr class='subjectContainerHeaderRow'><td><p class='subjectContainerHeaderTitle'>
+				Admin
+				</p></td></tr>
+				
+				<tr class='subjectContainerSubRow'><td class='subjectContainerSubRowTD'><p class='basicPageText'>
+				Admin1231e12
+				</p><td></tr>
+			</table>
+		</div>
+
+		<div class='subjectContainer'>
+			<table>
+				<tr class='subjectContainerHeaderRow'><td><p class='subjectContainerHeaderTitle'>
+				Delete primary subject
+				</p></td></tr>
+				
+				<tr class='subjectContainerSubRow'><td class='subjectContainerSubRowTD'><p class='basicPageText'>
+				Admin1231e12
+				</p><td></tr>
+			</table>
+		</div>
+
+		<div class='subjectContainer'>
+			<table>
+				<tr class='subjectContainerHeaderRow'><td><p class='subjectContainerHeaderTitle'>
+				Delete secondary subject
+				</p></td></tr>
+				
+				<tr class='subjectContainerSubRow'><td class='subjectContainerSubRowTD'><p class='basicPageText'>
+				Admin1231e12
+				</p><td></tr>
+			</table>
+		</div>
+		";
+
+		return $view;
+	}
+
+	/**
+	 * Function for getting the view
+	 * 
+	 * @return string $view
+	 */	
+	public function getView() : string
+	{
+		// Updating the view
+		$this::$viewContent = $this->createView($this::$output);
+
+		// Returning the view
+		return Parent::getViewContent();
+	}
+
+	private function getRemovePrimarySubView() {}
+
+	private function getRemoveSecondarySubView() {}
+}
+?>
